add github pages CI workflow and conf

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Rezeptbuch
 description: Sammlung von Rezepten zur einfachen Suche und zum nachkochen!
 theme: just-the-docs
-url: https://rezeptbuch.github.io
+url: https://OlGe404.github.io/rezeptbuch
 
 aux_links_new_tab: true
 aux_links:
