--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,19 +1,28 @@
 ---
-name: Build site and deploy to GitHub Pages
+name: Build and deploy
 
 on:
   push:
-    branches: ["main"]
+    branches:
+      - main
+    
+    paths-ignore:
+      - .gitignore
+      - .ruby-version
+      - Gemfile.lock
+      - LICENSE
+      - Makefile
+      - README.md
+      - renovate.json
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+# Sets permissions to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Cancel running builds when new changes are pushed
 concurrency:
-  group: "pages"
+  group: pages
   cancel-in-progress: true
 
 jobs:
@@ -22,6 +31,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
