--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -7,6 +7,7 @@ on:
       - main
     
     paths-ignore:
+      - content/_template.md
       - .gitignore
       - .ruby-version
       - Gemfile.lock
