--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -32,6 +32,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      
+      - name: Generate recipes.json
+        run: ./python3-venv.sh && source .venv/bin/activate && ./converter.py
 
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
