update configuration to remove auxiliary links and simplify navigation

--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,9 @@ title: Rezeptbuch
 description: Sammlung von Koch- und Backrezepten zur einfachen Suche und zum nachkochen!
 theme: just-the-docs
 url: https://OlGe404.github.io/rezeptbuch
-
-aux_links_new_tab: true
 aux_links:
-  "Rezept hinzufügen":
-    - "https://github.com/OlGe404/OlGe404.github.io/blob/main/README.md#hinzuf%C3%BCgen-neuer-rezepte"
+  "Startseite":
+    - /
 
 search:
   rel_url: false
