--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,9 @@ aux_links:
     - /
 
 search:
-  rel_url: false
-  heading_level: 3
   previews: 5
-  preview_words_after: 5
+  # Don't display the URL in search results
+  rel_url: false
 
 callouts:
   info:
