fix url in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Rezeptbuch
 description: Sammlung von Koch- und Backrezepten zur einfachen Suche und zum nachkochen!
 theme: just-the-docs
-url: https://OlGe404.github.io/rezeptbuch
+url: https://olge404.github.io
 aux_links:
   "Startseite":
     - /
